Use markdown for extra target info
Fixes #5

--- a/asteroid_tracker/templates/base.html.tmpl
+++ b/asteroid_tracker/templates/base.html.tmpl
@@ -71,6 +71,8 @@
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- Showdown -->
+        <script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js "></script>
 
         {% block extra_js %}
         {% endblock %}
