--- a/asteroid_tracker/templates/home.html.tmpl
+++ b/asteroid_tracker/templates/home.html.tmpl
@@ -14,21 +14,17 @@
     <div class="row panels">
         <h3>Active Asteroid Campaigns</h3>
         {% for target in targets %}
-            <div class="col-sm-6 panel-item">
-                <a href="{{ target.url }}" class="panel panel-image">
-                    <div class="panel-icon">
-                        <i class="fa fa-cog icon"></i>
-                    </div>
-                    <div class="panel-heading">
-                        <img height="141" src="/static/previews/{{ target.image_name }}"
-                             alt="{{ target.name }}" class="img-responsive-sm" />
-                    </div>
-                    <div class="panel-body">
-                        <h3 class="panel-title">{{ target.name }}</h3>
-                        <p>{{ target.teaser }}</p>
-                    </div>
-                </a>
-            </div>
+            {% if target.active %}
+                {% include "target_homepage_listing.html.tmpl" %}
+            {% endif %}
+        {% endfor %}
+    </div>
+    <div class="row panels">
+        <h3>Past Asteroid Campaigns</h3>
+        {% for target in targets %}
+            {% if not target.active %}
+                {% include "target_homepage_listing.html.tmpl" %}
+            {% endif %}
         {% endfor %}
     </div>
 </div>
