--- a/asteroid_tracker/templates/asteroid.html.tmpl
+++ b/asteroid_tracker/templates/asteroid.html.tmpl
@@ -5,7 +5,7 @@
     <h1 class="asteroid-name">Loading...</h1>
 </div>
 
-<div class="row">
+<div class="row" id="form-wrapper">
     <div class="col-md-2"></div>
 
     <div class="col-md-10">
